fix: properly align currency in the aircraft profit dashboard

--- a/extension/css/content.css
+++ b/extension/css/content.css
@@ -1,7 +1,14 @@
+/* Helpers */
 .aes-text-right {
 	text-align: right;
 }
 
 .aes-no-text-wrap {
+	white-space: nowrap;
+}
+
+/* Specific */
+.aes-aircraftProfit-profit {
+	text-align: right;
 	white-space: nowrap;
 }
